nlp spam or ham project update file

--- a/notebook/NLP_spam_notebook.ipynb
+++ b/notebook/NLP_spam_notebook.ipynb
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -913,7 +913,7 @@
     "    y_pred = model.predict(X_test_feat)\n",
     "    y_prob = model.predict_proba(X_test_feat)[:, 1]\n",
     "\n",
-    "    accuracy = round(accuracy_score(y_test, y_pred))\n",
+    "    accuracy = (accuracy_score(y_test, y_pred))\n",
     "    precision = round(precision_score(y_test, y_pred, pos_label='spam'))\n",
     "    recall = round(recall_score(y_test, y_pred, pos_label='spam'), 3)\n",
     "\n",
